apps/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: app
          image: registry-temporary.harbor.example.com/test/app-python-web:3.14-slim
          ports:
            - containerPort: 8080
