apps/resources/service-mariadb-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-headless
spec:
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
